Fixing margins on story truncation.

--- a/media/css/reader.css
+++ b/media/css/reader.css
@@ -2286,13 +2286,14 @@ background: transparent;
     max-height: none;
 }
 .NB-feed-story .NB-story-content-wrapper {
-    margin: 0 236px 0 28px;
+    margin: 0 236px 28px 28px;
 }
 .NB-feed-story-view-narrow .NB-feed-story .NB-story-content-wrapper {
     margin-right: 28px;
 }
 .NB-story-content-wrapper.NB-story-content-wrapper-height-truncated {
     max-height: 460px;
+    margin-bottom: 0;
     overflow: hidden;
 }
 .NB-story-content-wrapper.NB-story-content-wrapper-height-fudged {
